welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ')' expected but integer literal found.
	if(a>13 && a 19){
                     ^hasTeen:7: error: illegal start of simple expression
}
^